codigo reiniar db que funciona comentado, preguntar despues